Refactor ImportExecutor to use ImportFormat enum